Add text props to Skydive

--- a/skydive.html
+++ b/skydive.html
@@ -24,7 +24,7 @@
         <p>Ariel Quiónes & Gonzalo Manrique, Ironhack Founders</p>
     </header>
 
-    <section id="section1">
+    <section id="general-information">
         <article>
             <h3>
                 <p> 
