--- a/skydive.html
+++ b/skydive.html
@@ -23,7 +23,7 @@
         <h1> <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png" alt="School Logo"> IronSkydive</h1>
         <h2>Let the Trip begin</h2>
         <aside> <em>"The best experience of our Lives"</em> 
-            <p>Ariel Quiónes & Gonzalo Manrique, Ironhack Founders</p>
+            <p>Ariel Quiónes & Gonzalo Manrique, <span>Ironhack Founders</span></p>
         </aside>
     </header>
 
@@ -69,7 +69,7 @@
             <article class="service-box">
                 <img src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png" alt="Fly">
                 <h4>3. Fly</h4>
-                <p>You are ready, ad the plane is waiuting for us in the hangar. Let's fly!</p>
+                <p>You are ready, and the plane is waiting for us in the hangar. Let's fly!</p>
             </article>
 
             <article class="service-box">
@@ -86,7 +86,7 @@
     <section id="team" class="dark-background">
         <h3>Team</h3>
         <p class="section-text">Our team collectively has 75years of experience. Odds are, when you jump out of the plane with these pros, you won't go splat!</p>
-        <hr id="hr-tag">
+        <hr id="hr-tag"> /*this is a horizontal rule*/
         <div>
             <article>
                 <h4 class="team-member">Harold Rothstein</h4>
